--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,4 @@
 config:
   diseaseSh-io-url: https://disease.sh/v3/covid-19/countries/India
-  john-hopkins-url: https://disease.sh/v3/covid-19/jhucsse
+#  john-hopkins-url: https://disease.sh/v3/covid-19/jhucsse
+  john-hopkins-url: https://disease.sh/v3/covid-19/countries
