--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,3 @@
 config:
   diseaseSh-io-url: https://disease.sh/v3/covid-19/countries/India
-#  john-hopkins-url: https://disease.sh/v3/covid-19/jhucsse
-  john-hopkins-url: https://disease.sh/v3/covid-19/countries
+  john-hopkins-url: https://disease.sh/v3/covid-19/jhucsse
